# bevy_wayland

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/camera/: .metadata  pubspec.yaml
apps/camera/lib/: main.dart
apps/files/: pubspec.yaml
apps/files/lib/: main.dart
apps/notes/lib/: main.dart
apps/settings/: pubspec.yaml
apps/settings/lib/: main.dart
dbus/freedesktop/bluez/: Cargo.toml  README.md
dbus/freedesktop/bluez/examples/: power_on.rs  scan.rs
dbus/freedesktop/bluez/src/: errors.rs  service.rs
dbus/freedesktop/bluez/src/interfaces/: device.rs  mod.rs
dbus/freedesktop/bluez/src/proxies/: adapter1.rs  device.rs  mod.rs
dbus/freedesktop/networkmanager/: Cargo.toml  README.md
dbus/freedesktop/networkmanager/examples/: access_point_events.rs  enable_wifi.rs  wifi_events.rs
dbus/freedesktop/networkmanager/src/: errors.rs  service.rs
dbus/freedesktop/networkmanager/src/interfaces/: mod.rs  wireless.rs
dbus/freedesktop/networkmanager/src/proxies/: access_point.rs  connection.rs  device.rs  mod.rs  wireless.rs
dbus/freedesktop/pulseaudio/: Cargo.toml  README.md
dbus/freedesktop/pulseaudio/examples/: sinks.rs
dbus/freedesktop/pulseaudio/src/: errors.rs  lib.rs  service.rs
dbus/freedesktop/upower/: Cargo.toml  README.md
dbus/freedesktop/upower/src/: errors.rs  lib.rs  service.rs
dbus/freedesktop/upower/src/interfaces/: device.rs  mod.rs
dbus/freedesktop/upower/src/proxies/: mod.rs
dbus/mechanix/mxconf/: Cargo.toml  README.md
dbus/mechanix/mxconf/examples/: client.rs
dbus/mechanix/mxconf/src/: lib.rs
examples/: external_event.rs  foreign_toplevel.rs  layer_shell_window.rs  session_lock.rs  simple_layer_shell_window.rs
services/conf/: Cargo.toml  README.md
services/conf/examples/: client.rs  client_library_example.rs
services/conf/src/: cli.rs  database.rs  error.rs  lib.rs  main.rs  server.rs  utils.rs  validator.rs
services/conf/tests/: README.md  client_test.rs  database_test.rs  server_test.rs  utils_test.rs  validator_test.rs
services/desktop/: Cargo.toml
services/mxsearch/: README.md  settings.toml.example
services/mxsearch/app_actions/: Cargo.toml
services/mxsearch/app_actions/src/: service.rs
services/mxsearch/apps/: Cargo.toml
services/mxsearch/files/src/: lib.rs
services/mxsearch/server/: Cargo.toml
services/mxsearch/server/src/: main.rs
services/search/: Cargo.toml  README.md  settings.toml
services/search/app_actions/: Cargo.toml
services/search/app_actions/src/: lib.rs  service.rs  utils.rs
services/search/apps/: Cargo.toml
services/search/apps/src/: lib.rs  service.rs  utils.rs
services/search/examples/: search_applications.rs
services/search/files/: Cargo.toml
services/search/files/src/: error.rs  lib.rs  service.rs  utils.rs
services/search/server/src/: error.rs  server.rs  service.rs
services/search/src/: lib.rs  main.rs  server.rs
services/system/: Cargo.toml
shared/: README.md
shell/crates/app_drawer/: Cargo.toml
shell/crates/background/: Cargo.toml
shell/crates/background/src/: lib.rs
shell/crates/homescreen/: Cargo.toml
shell/crates/homescreen/src/: lib.rs
shell/crates/keyboard/: Cargo.toml
shell/crates/launcher/: Cargo.toml
shell/crates/launcher/src/: lib.rs  main.rs
shell/crates/lockscreen/: Cargo.toml
shell/crates/lockscreen/src/: lib.rs
shell/crates/navigation_bar/: Cargo.toml
shell/crates/navigation_bar/src/: lib.rs
shell/crates/notifications_drawer/: Cargo.toml
shell/crates/notifications_drawer/src/: lib.rs
shell/crates/running_apps/: Cargo.toml
shell/crates/running_apps/src/: lib.rs
shell/crates/settings_drawer/: Cargo.toml
shell/crates/settings_drawer/src/: lib.rs
shell/crates/status_bar/: Cargo.toml
shell/crates/status_bar/src/: components.rs  constants.rs  lib.rs  main.rs  systems.rs
shell/crates/types/: Cargo.toml
shell/crates/types/src/: fonts.rs  icons.rs  lib.rs
shell/crates/universal_search/: Cargo.toml
shell/crates/universal_search/src/: lib.rs
shell/crates/utils/: Cargo.toml
shell/crates/utils/src/: assets_loading.rs  lib.rs
shell/launcher/: Cargo.toml
shell/notification/: Cargo.toml
src/: foreign_toplevel_manager.rs  input_handler.rs  input_region.rs  layer_shell.rs  lib.rs  output_handler.rs  session_lock.rs  surface_handler.rs
src/input_handler/: keyboard.rs  mod.rs  pointer.rs  touch.rs
tools/: README.md
utils/: README.md
