[workspace]
resolver = "3"
members = [
    "services/desktop",
    "services/conf",
    "services/system",
    "services/search/apps",
    "services/search/files",
    "services/search/server",
    "services/search/app_actions",
    "shell/launcher",
    "shell/keyboard",
    "shell/notification",
    "dbus/freedesktop/bluez",
    "dbus/freedesktop/networkmanager",
    "dbus/freedesktop/pulseaudio",
    "dbus/freedesktop/upower",
    "dbus/mechanix/mxconf",
]

[workspace.package]
version = "0.0.0"
authors = [
    "Akshay Raina <akshayr@mechasystems.com>", 
    "Shoaib Merchant <shoaibm@mechasystems.com>"
]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = ["linux", "shell", "mobile", "gui", "ui"]

[workspace.dependencies]
mxconf_dbus = { path = "dbus/mechanix/mxconf" }
notify = { version = "8.2.0" }
tokio = { version = "1.46.1", features = ["full"] }
log = { version = "0.4.27" }
configparser = { version = "3.1.0" }
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", branch = "main" }
anyhow = { version = "1.0.99" }
zbus = "3.14.1"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
thiserror = "2.0.12"
