[workspace]
resolver = "3"
members = [
    "services/desktop",
    "services/conf",
    "services/system",
    "services/search/*",
    "shell/crates/*",
    "dbus/freedesktop/*",
    "dbus/mechanix/mxconf",
]

[workspace.package]
version = "0.0.0"
authors = [
    "Akshay Raina <akshayr@mechasystems.com>",
    "Shoaib Merchant <shoaibm@mechasystems.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-gui"
homepage = "https://mecha.so"
categories = ["gui"]
keywords = ["linux", "shell", "mobile", "gui", "ui"]

[workspace.dependencies]
mxconf_dbus = { path = "dbus/mechanix/mxconf" }
notify = { version = "8.2.0" }
tokio = { version = "1.46.1", features = ["full"] }
log = { version = "0.4.27" }
anyhow = { version = "1.0.99" }
zbus = "3.14.1"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
thiserror = "2.0.12"
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_ui",
    "bevy_window",
    "trace",
    "bevy_winit",
    "wayland",
    "multi_threaded",
    "default_font",
    "bevy_state",
] }
bevy_wayland = { path = "../../temp/bevy_wayland" }
bevy_asset_loader = { version = "0.23.0-rc.3", features = [
    "standard_dynamic_assets",
    "2d",
] }
