[package]
name = "bevy_wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_ui",
    "bevy_window",
    "trace",
    "bevy_winit",
    "wayland",
    "multi_threaded",
] }

lazy_static = "1.5.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-protocols-wlr = "0.3.9"
