[package]
name = "mxsearch"
description = "A simple and fast search engine for your apps and files."
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
zbus = "3.14.1"
thiserror = "2.0.12"
toml = "0.9.2"
apps = { path = "apps" }
files = { path = "files" }
app_actions = { path = "app_actions" }

