[package]
name = "mxsearch-meta"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
# This crate is a metadata placeholder to avoid nested Cargo workspaces.
# Actual search crates are included in the root workspace:
# - services/search/apps
# - services/search/files
# - services/search/server
# - services/search/app_actions