[package]
name = "bluez"
description = "D-Bus interface for accessing bluetooth" 
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]