[package]
name = "networkmanager"
description = "D-Bus interface used to access the NetworkManager daemon" 
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5.7.1" }
futures = "0.3.30"
thiserror = { version = "2.0.12" }
async-trait = { version = "0.1.88" }
log = { version = "0.4.27" }
bitflags = "2.9.0"
uuid = { version = "1.16.0", features = ["v4"] }
mockall = { version = "0.13.1" }