[package]
name = "pulseaudio"
description = "D-Bus interface used to access the sound" 
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]