[package]
name = "pulseaudio"
description = "D-Bus interface used to access the sound" 
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
libpulse-binding = "2.28.2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2.0.12" }
async-trait = { version = "0.1.88" }
log = { version = "0.4.27" }