[package]
name = "mxconf_dbus"
description = "D-Bus interface used to access the configuration server" 
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
serde_json = "1.0.140"
log = "0.4.27"
tokio = { version = "1", features = ["full"] }
zbus = "3.14.1"