[package]
name = "app_actions"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
toml = "0.9.5"
crc32fast = "1.5.0"