[package]
name = "mxsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
env_logger = "0.11.8"
thiserror = "2.0.12"
toml = "0.9.2"
apps = { path = "../apps" }
files = { path = "../files" }
app_actions = { path = "../app_actions" }