[package]
name = "app_actions"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
notify = "8.1.0"
dirs = "6.0.0"
anyhow = "1.0.98"
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", branch = "main" }
log = "0.4.27"
futures = "0.3.31"
crc32fast = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
zbus = "3.14.1"
toml = "0.9.5"