[package]
name = "apps"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
zbus = { workspace = true }
configparser = { version = "3.1.0"}
dirs = { version = "6.0.0" }
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", branch = "main" }