[package]
name = "files"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
notify = "8.1.0"
tokio = { version = "1.46.1", features = ["full"] }
log = "0.4.27"
zbus = "3.14.1"
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", branch = "main" }
anyhow = "1.0.98"
dirs = "6.0.0"
futures = "0.3.31"
thiserror = "2.0.12"