[package]
name = "files"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
zbus = { workspace = true }
tantivy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
notify = "8.1.0"
dirs = { version = "6.0.0" }