[package]
name = "files"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
zbus = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
notify = { version = "8.2.0"}
dirs = { version = "6.0.0" }
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", branch = "main" }
