[package]
name = "mechanix-keyboard"
description = "Keyboard application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mxconf_dbus = { workspace = true}
